tested sparse and dense matrix on svc

--- a/efficient_ml/efficient_ml.ipynb
+++ b/efficient_ml/efficient_ml.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "62ecfc7d-39de-4279-8f8f-2554afee0395",
    "metadata": {},
    "outputs": [],
@@ -36,20 +36,10 @@
     "import pandas as pd\n",
     "import scipy\n",
     "import uuid\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "60bcadb6-92af-4ab6-bbed-0b80acde5e27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# constants"
    ]
   },
   {
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "dadb441c-91ef-4039-a2a2-ed7af06388e5",
    "metadata": {},
    "outputs": [],
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "6042254c-25f5-4cd8-a1b0-38acb9c6ed44",
    "metadata": {},
    "outputs": [
@@ -113,22 +103,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 278 ms, sys: 156 ms, total: 434 ms\n",
-      "Wall time: 870 ms\n"
+      "CPU times: user 3.11 s, sys: 2.11 s, total: 5.22 s\n",
+      "Wall time: 6.87 s\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "df = generate_data(\n",
-    "    id_n = 10000,\n",
+    "    id_n = 100000,\n",
     "    prd_n = 1000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
+   "id": "c6de6a8d-bfb6-4a2c-bdd2-7a0912256bb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 1001)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "6c8af3d9-bcc6-4877-bf91-8b1378500632",
    "metadata": {},
    "outputs": [],
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "38718d16-42cb-4e3a-b899-6944f3ebe463",
    "metadata": {},
    "outputs": [
@@ -146,18 +157,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 14.4 ms, sys: 41.9 ms, total: 56.3 ms\n",
-      "Wall time: 273 ms\n"
+      "CPU times: user 168 ms, sys: 375 ms, total: 542 ms\n",
+      "Wall time: 984 ms\n"
      ]
     }
    ],
    "source": [
-    "%time dense_vectors = df[ft_cols]"
+    "%time dense_vectors = df[ft_cols].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "b2cd86a1-8215-4ac4-b9b3-53dce47a65ae",
    "metadata": {},
    "outputs": [
@@ -165,8 +176,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 207 ms, sys: 60.4 ms, total: 268 ms\n",
-      "Wall time: 301 ms\n"
+      "CPU times: user 1.57 s, sys: 924 ms, total: 2.5 s\n",
+      "Wall time: 3.3 s\n"
      ]
     }
    ],
@@ -179,7 +190,7 @@
    "id": "dfa19af7-0e45-454f-bf60-616acbf2aae9",
    "metadata": {},
    "source": [
-    "## Train SVM"
+    "## SVC - Dense"
    ]
   },
   {
@@ -188,7 +199,11 @@
    "id": "c910eab1-5c41-4513-b3a5-5abf1c53803b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = dense_vectors\n",
+    "y = df['category'].values\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X ,y ,test_size = 0.7)"
+   ]
   },
   {
    "cell_type": "code",
@@ -196,7 +211,62 @@
    "id": "5cad8466-dd2b-44e5-8cfd-035d2f7eebb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "dense_svc = SVC()\n",
+    "dense_svc.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2acd23-df08-407a-81c6-3cd7f6373a5e",
+   "metadata": {},
+   "source": [
+    "## SVC - Sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "155a2a2f-131b-4e2d-b3e1-f0c236e2e9e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = sparse_vectors\n",
+    "y = df['category'].values\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X ,y ,test_size = 0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e49a8a94-348c-4175-91d9-f545216eaa7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 24.5 s, sys: 1.17 s, total: 25.6 s\n",
+      "Wall time: 27 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sparse_svc = SVC()\n",
+    "sparse_svc.fit(x_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
